# followthedot

./: README.md
.github/: dependabot.yml
.github/workflows/: rust_checks.yml
ftd-backend/: Cargo.toml  README.md
ftd-backend/_config/: base.toml
ftd-backend/_config/env/: development.toml  production.toml  test.toml
ftd-backend/_config/network/: kusama.toml  polkadot.toml
ftd-backend/_migrations/: .env.sample  reset-db.sh
ftd-backend/_migrations/migrations/: 20240415065301_ftd_account.down.sql  20240415065301_ftd_account.up.sql  20240415065307_ftd_block.down.sql  20240415065307_ftd_block.up.sql  20240415065311_ftd_transfer.down.sql  20240415065311_ftd_transfer.up.sql  20240417120806_ftd_transfer_volume.down.sql  20240417120806_ftd_transfer_volume.up.sql  20240421061516_ftd_identity.down.sql  20240421061516_ftd_identity.up.sql  20240421061516_ftd_identity_change.down.sql  20240421061516_ftd_identity_change.up.sql  20240421061600_ftd_sub_identity.down.sql  20240421061600_ftd_sub_identity.up.sql  20240429071037_ftd_transfer_volume_updater_state.down.sql  20240429071037_ftd_transfer_volume_updater_state.up.sql  20240502160613_ftd_identity_updater_state.down.sql  20240502160613_ftd_identity_updater_state.up.sql  20240530180751_ftd_subscan_account.down.sql  20240530180751_ftd_subscan_account.up.sql
ftd-backend/ftd-api-service/: Cargo.toml
ftd-backend/ftd-api-service/src/: lib.rs  main.rs  metrics.rs
ftd-backend/ftd-api-service/src/account/: mod.rs
ftd-backend/ftd-api-service/src/transfer/: mod.rs
ftd-backend/ftd-balance-updater/: Cargo.toml
ftd-backend/ftd-balance-updater/src/: lib.rs  main.rs  metrics.rs
ftd-backend/ftd-config/: Cargo.toml
ftd-backend/ftd-config/src/: lib.rs
ftd-backend/ftd-graph-updater/: Cargo.toml
ftd-backend/ftd-graph-updater/src/: lib.rs  main.rs  metrics.rs
ftd-backend/ftd-identity-updater/: Cargo.toml
ftd-backend/ftd-identity-updater/src/: lib.rs  main.rs  metrics.rs
ftd-backend/ftd-indexer/: Cargo.toml
ftd-backend/ftd-indexer/src/: lib.rs  main.rs  metrics.rs
ftd-backend/ftd-logging/: Cargo.toml
ftd-backend/ftd-logging/src/: lib.rs
ftd-backend/ftd-metrics/: Cargo.toml
ftd-backend/ftd-metrics/src/: server.rs
ftd-backend/ftd-persistence/: Cargo.toml
ftd-backend/ftd-persistence/src/: account.rs  block.rs  event.rs  lib.rs  transfer.rs  transfer_volume.rs
ftd-backend/ftd-persistence/src/graph/: mod.rs
ftd-backend/ftd-persistence/src/graph/neo4j/: account.rs  mod.rs  state.rs  transfer.rs
ftd-backend/ftd-persistence/src/neo4j/: account.rs  mod.rs  transfer.rs
ftd-backend/ftd-persistence/src/postgres/: account.rs  block.rs  identity.rs  mod.rs  transfer.rs  transfer_volume.rs
ftd-backend/ftd-persistence/src/relational/: mod.rs
ftd-backend/ftd-persistence/src/relational/postgres/: account.rs  block.rs  identity.rs  mod.rs  subscan.rs  transfer.rs  transfer_volume.rs
ftd-backend/ftd-service/: Cargo.toml
ftd-backend/ftd-service/src/: err.rs  lib.rs
ftd-backend/ftd-sidecar-client/: Cargo.toml
ftd-backend/ftd-sidecar-client/src/: block.rs  identity.rs  lib.rs
ftd-backend/ftd-subscan-account-fetcher/: Cargo.toml
ftd-backend/ftd-subscan-account-fetcher/src/: lib.rs  main.rs  metrics.rs
ftd-backend/ftd-subscan-client/: Cargo.toml
ftd-backend/ftd-subscan-client/src/: lib.rs
ftd-backend/ftd-substrate-client/: Cargo.toml
ftd-backend/ftd-substrate-client/src/: lib.rs  storage_utility.rs
ftd-backend/ftd-transfer-volume-updater/: Cargo.toml
ftd-backend/ftd-transfer-volume-updater/src/: lib.rs  main.rs  metrics.rs
ftd-backend/ftd-types/: Cargo.toml
ftd-backend/ftd-types/src/: err.rs  graph.rs  lib.rs  subscan.rs
ftd-backend/ftd-types/src/api/: account.rs  identity.rs  mod.rs  transfer.rs
ftd-backend/ftd-types/src/substrate/: account_id.rs  balance.rs  block.rs  chain.rs  event.rs  identity.rs  mod.rs  system.rs
ftd-web/: .eslintrc  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
ftd-web/src/client/: client.ts  ftd.ts
ftd-web/src/client/api/: api.ts
ftd-web/src/client/data/: data-store.ts  data.ts
ftd-web/src/client/event/: event-bus.ts  event.ts
ftd-web/src/client/model/: ftd-model.ts
ftd-web/src/client/model/substrate/: network.ts
ftd-web/src/client/ui/: graph.ts  search-bar.ts  ui.ts
ftd-web/src/client/util/: async-util.ts  constants.ts  crypto-util.ts  format.ts  tween.ts  ui-util.ts
ftd-web/src/server/: server.ts
ftd-web/tests/: dummy.test.ts
