[workspace]
members = [
    "ftd-api-service",
    "ftd-config",
    "ftd-graph-updater",
    "ftd-identity-updater",
    "ftd-indexer",
    "ftd-logging",
    "ftd-metrics",
    "ftd-persistence",
    "ftd-service",
    "ftd-sidecar-client",
    "ftd-subscan-account-fetcher",
    "ftd-subscan-client",
    "ftd-substrate-client",
    "ftd-transfer-volume-updater",
    "ftd-types",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-web = "4.8"
anyhow = "1"
async-recursion = "1.0"
async-trait = "0.1"
chrono = "0.4"
config = "0.15"
env_logger = "0.11"
frame-metadata = "23.0"
frame-support = "40.1"
hex = "0.4"
jsonrpsee = "0.25"
jsonrpsee-core = "0.25"
lazy_static = "1.5"
log = "0.4"
neo4rs = "0.8"
once_cell = "1"
prometheus = "0.14"
reqwest = "0.12"
rustc-hash = "2.0"
serde = "1"
serde_json = "1"
sp-core = "36.1"
sqlx = "0.8"
thiserror = "2"
tokio = "1.41"