[workspace]
members = [
    "ftd-api-service",
    "ftd-config",
    "ftd-graph-updater",
    "ftd-identity-updater",
    "ftd-indexer",
    "ftd-logging",
    "ftd-metrics",
    "ftd-persistence",
    "ftd-service",
    "ftd-sidecar-client",
    "ftd-subscan-account-fetcher",
    "ftd-subscan-client",
    "ftd-substrate-client",
    "ftd-transfer-volume-updater",
    "ftd-types",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
rust-version = "1.91.1"
edition = "2021"
repository = "https://github.com/helikon-labs/followthedot"
authors = ["kukabi <kutsal@helikon.io>"]
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4.12"
anyhow = "1"
async-recursion = "1.1"
async-trait = "0.1"
chrono = "0.4"
config = "0.15"
env_logger = "0.11"
frame-metadata = "23.0"
frame-support = "45.1"
frame-system = "45.0"
futures-util = "0.3"
hex = "0.4"
jsonrpsee = "0.26"
jsonrpsee-core = "0.25"
lazy_static = "1.5"
log = "0.4"
neo4rs = "0.8"
once_cell = "1"
pallet-balances = "46.0"
pallet-identity = "45.0"
parity-scale-codec = "3.7"
prometheus = "0.14"
reqwest = { version = "0.13", features = ["query", "blocking", "json", "gzip", "brotli"] }
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp-core = "39.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
warp = { version = "0.4", features = ["server"] }