[package]
name = "ftd-api-service"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"
authors = ["kukabi <kutsal@helikon.io>"]

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
anyhow = { workspace = true }
async-trait = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-metrics = { path = "../ftd-metrics" }
ftd-persistence = { path = "../ftd-persistence" }
ftd-service = { path = "../ftd-service" }
ftd-subscan-client = { path = "../ftd-subscan-client" }
ftd-substrate-client = { path = "../ftd-substrate-client" }
ftd-types = { path = "../ftd-types" }
futures-util = "0.3"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }