[package]
name = "ftd-api-service"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-metrics = { path = "../ftd-metrics" }
ftd-persistence = { path = "../ftd-persistence" }
ftd-service = { path = "../ftd-service" }
ftd-subscan-client = { path = "../ftd-subscan-client" }
ftd-substrate-client = { path = "../ftd-substrate-client" }
ftd-types = { path = "../ftd-types" }
futures-util = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }