[package]
name = "ftd-indexer"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"
authors = ["kukabi <kutsal@helikon.io>"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-metrics = { path = "../ftd-metrics" }
ftd-persistence = { path = "../ftd-persistence" }
ftd-service = { path = "../ftd-service" }
ftd-sidecar-client = { path = "../ftd-sidecar-client" }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
