[package]
name = "ftd-indexer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-metrics = { path = "../ftd-metrics" }
ftd-persistence = { path = "../ftd-persistence" }
ftd-service = { path = "../ftd-service" }
ftd-sidecar-client = { path = "../ftd-sidecar-client" }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
