[package]
name = "ftd-logging"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
env_logger = { workspace = true }
ftd-config = { path = "../ftd-config" }
log = { workspace = true }