[package]
name = "ftd-metrics"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"
authors = ["kukabi <kutsal@helikon.io>"]

[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }