[package]
name = "ftd-persistence"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-types = { path = "../ftd-types" }
log = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono"] }