[package]
name = "ftd-persistence"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-types = { path = "../ftd-types" }
lazy_static = { workspace = true }
log = { workspace = true }
neo4rs = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono"] }