[package]
name = "ftd-persistence"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-types = { path = "../ftd-types" }
lazy_static = { workspace = true }
log = { workspace = true }
neo4rs = { workspace = true }
sqlx = { workspace = true }