[package]
name = "ftd-service"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-logging = { path = "../ftd-logging" }
ftd-metrics = { path = "../ftd-metrics" }
ftd-types = { path = "../ftd-types" }
tokio = { workspace = true }