[package]
name = "ftd-sidecar-client"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-types = { path = "../ftd-types" }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "gzip", "brotli"] }
serde_json = { workspace = true }