[package]
name = "ftd-sidecar-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-types = { path = "../ftd-types" }
log = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }