[package]
name = "ftd-subscan-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ftd-config = { path = "../ftd-config" }
ftd-types = { path = "../ftd-types" }
reqwest = { workspace = true }
rustc-hash = { workspace = true }