[package]
name = "ftd-substrate-client"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
frame-metadata = { workspace = true, features = ["default"] }
ftd-types = { path = "../ftd-types" }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
jsonrpsee-core = { workspace = true }
log = { workspace = true }
parity-scale-codec = "3.6"
rustc-hash = { workspace = true }
sp-core = { workspace = true }