[package]
name = "ftd-substrate-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
frame-metadata = { workspace = true, features = ["default"] }
ftd-types = { path = "../ftd-types" }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
jsonrpsee-core = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
rustc-hash = { workspace = true }
sp-core = { workspace = true }