[package]
name = "ftd-types"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
frame-support = { workspace = true }
hex = { workspace = true }
pallet-identity = "40.1"
parity-scale-codec = "3.7"
pallet-balances = "41.1"
frame-system = "40.1"
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
thiserror = { workspace = true }