[package]
name = "ftd-types"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
frame-support = { workspace = true }
hex = { workspace = true }
pallet-identity = { workspace = true }
parity-scale-codec = { workspace = true }
pallet-balances = { workspace = true }
frame-system = { workspace = true }
serde = { workspace = true }
sp-core = { workspace = true }
thiserror = { workspace = true }